# opencvdemo

./: .gitignore  .ignore  CMakeLists.txt  OpencvDemo.cpp
cpp/: Blur.cpp  CMakeCache.txt  CMakeLists.txt  Division.cpp  FourierTransfrom.cpp  GaussBlur  GaussBlur.cpp  Histrom.cpp  LoadImage  LoadImage.cpp  LoadVideo  LoadVideo.cpp  Makefile  Smoothing.cpp  Sobel.cpp  calGrayHist  calGrayHist.cpp  cmake_install.cmake  discrete_fourier_transform.cpp  mask_rcnn.cpp  transform  transform.cpp
models/: mask_rcnn.pbtxt
python/: capcamera.py  loadimage.py  loadmp4.py  smoth.py  transform.py
